--- a/ExcellentLearningApp/ExcellentLearningApp.csproj
+++ b/ExcellentLearningApp/ExcellentLearningApp.csproj
@@ -8,4 +8,9 @@
     <Folder Include="Views\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
